--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -26,7 +26,7 @@
 
         <!--Documentación UTEL-->
         <div class="bloque activo" id="bloqueDocUtel">
-          <div class="card border-0 py-3 px-3">
+          <div class="card border-0 py-3 px-3" style="text-align: justify;">
             <h4><b>Requisitos de los documentos.</b></h4></br>
 
             <a>
@@ -1059,7 +1059,7 @@
         <div class="bloque" id="bloqueTiposiIngreso">
           <div class="border border-0 card mt-1">
 
-            <div class="card border-0 py-3 px-3">
+            <div class="card border-0 py-3 px-3" >
               <h4><b>¿Qué son los tipos de ingreso?</b></h4></br>
 
               <a>
@@ -1081,7 +1081,7 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title text-center">Equivalencia</h5>
-                        <p class="card-text">
+                        <p class="card-text" style="text-align: justify;">
                           Es un documento expedido de una modalidad educativa a otra, en el que se declaran equiparables entre sí los estudios realizados dentro del Sistema 
                           Educativo Nacional (SEN), es decir, si un alumno ha acreditado estudios dentro del SEN y por algún motivo desea continuar con el mismo plan o programa 
                           en otra institución educativa oficial o particular perteneciente a dicho sistema educativo, deberá tramitar la equivalencia de estudios correspondiente. 
@@ -1148,7 +1148,7 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title text-center">Revalidación</h5>
-                        <p class="card-text">
+                        <p class="card-text" style="text-align: justify;">
 
                           Trámite ante SEP para equiparar estudios realizados fuera del sistema educativo nacional (en
                           el extranjero)</br></br>
@@ -1230,7 +1230,7 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title text-center">Dictamen técnico</h5>
-                        <p class="card-text">
+                        <p class="card-text" style="text-align: justify;">
 
                           Este proceso aplica para los estudiantes que ingresan a Utel con fines académicos sin la
                           intención de ejercer profesionalmente en México.</br></br>
@@ -1311,7 +1311,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title text-center">¿Qué es la legalización?</h5>
-                      <p class="card-text">
+                      <p class="card-text" style="text-align: justify;">
 
                         El trámite de Legalización de Firmas consiste en certificar las Firmas de los Servidores
                         Públicos Federales
@@ -1464,7 +1464,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title text-center">¿Cómo se hace el préstamo?</h5>
-                      <p class="card-text">
+                      <p class="card-text" style="text-align: justify;"> 
                         Se requiere el formato de préstamo Licenciatura o Maestría; el cual debe ser llenado por el
                         alumno
 
@@ -1495,7 +1495,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title text-center">¿Cómo se hace una devolución de documentos?</h5>
-                      <p class="card-text">
+                      <p class="card-text" style="text-align: justify;">
 
                         El alumno necesita contratar una guía prepagada de la paquetería de su preferencia para que con
                         ella se dé salida a sus documentos (solo en casos extraordinarios el exalumno o una tercera
@@ -1524,7 +1524,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title text-center">¿Cómo se hace el escaneo?</h5>
-                      <p class="card-text">
+                      <p class="card-text" style="text-align: justify;">
                         Se hace la solicitud por medio de Flokzu
                         <br /><br />
                         Una vez hecha la solicitud, el área de archivo responde la solicitud (aproximadamente en 48
