--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -174,6 +174,37 @@
 
           </div>
 
+          <div class="accordion-item">
+
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumno">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapsemalumno" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumno">
+                Material para el alumno
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapsemalumno" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumno">
+              <div class="accordion-body">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                  <h1 class="text-center">Material para el alumno</h1>
+
+                  <div class="row">
+
+                    <div class="col my-3 mx-3">
+
+
+                    </div>
+
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
         </div>
 
         <!--Formatos ss regular-->
@@ -525,6 +556,37 @@
               </div>
 
             </div>
+
+            <div class="accordion-item">
+
+              <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                  aria-controls="panelsStayOpen-collapsemalumnoutel">
+                  Material para el alumno
+                </button>
+              </h2>
+
+              <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+                aria-labelledby="panelsStayOpen-headingmalumnoutel">
+                <div class="accordion-body">
+                  <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                    <h1 class="text-center">Material para el alumno</h1>
+
+                    <div class="row">
+
+                      <div class="col my-3 mx-3">
+
+
+                      </div>
+
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
           </div>
 
           <!--Formatos trabajo en UTEL-->
@@ -781,8 +843,10 @@
           tengan una
           antigüedad mínima de 6 meses en el puesto
         </div>
-
+        
+        <!--Proceso-->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
+
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingProceso art 91">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -839,8 +903,39 @@
             </div>
 
           </div>
-        </div>
 
+          <div class="accordion-item">
+
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                Material para el alumno
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+              <div class="accordion-body">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                  <h1 class="text-center">Material para el alumno</h1>
+
+                  <div class="row">
+
+                    <div class="col my-3 mx-3">
+
+
+                    </div>
+
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
 
         <!--Formatos Art 91-->
         <div class="container my-3 mx-3">
@@ -1037,6 +1132,7 @@
 
         <!--Proceso trabajo colaborativo -->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
+
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingproceso">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -1083,6 +1179,37 @@
                     <div class="col text-center ">
                       <img src="img/serviciosocial/proceso_trabajo.png " style="height: 700px;">
                     </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="accordion-item">
+
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                Material para el alumno
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+              <div class="accordion-body">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                  <h1 class="text-center">Material para el alumno</h1>
+
+                  <div class="row">
+
+                    <div class="col my-3 mx-3">
+
+
+                    </div>
+
 
                   </div>
                 </div>
@@ -1410,6 +1537,37 @@
 
           </div>
 
+          <div class="accordion-item">
+
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                Material para el alumno
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+              <div class="accordion-body">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                  <h1 class="text-center">Material para el alumno</h1>
+
+                  <div class="row">
+
+                    <div class="col my-3 mx-3">
+
+
+                    </div>
+
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
         </div>
 
 
@@ -1729,6 +1887,37 @@
 
           </div>
 
+          <div class="accordion-item">
+
+              <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                  aria-controls="panelsStayOpen-collapsemalumnoutel">
+                  Material para el alumno
+                </button>
+              </h2>
+
+              <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+                aria-labelledby="panelsStayOpen-headingmalumnoutel">
+                <div class="accordion-body">
+                  <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                    <h1 class="text-center">Material para el alumno</h1>
+
+                    <div class="row">
+
+                      <div class="col my-3 mx-3">
+
+
+                      </div>
+
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
         </div>
 
 
@@ -2035,6 +2224,37 @@
                     <div class="col text-center ">
                       <img src="img/serviciosocial/comunidad.png " style="height: 700px;">
                     </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="accordion-item">
+
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                Material para el alumno
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+              <div class="accordion-body">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                  <h1 class="text-center">Material para el alumno</h1>
+
+                  <div class="row">
+
+                    <div class="col my-3 mx-3">
+
+
+                    </div>
+
 
                   </div>
                 </div>
@@ -2363,6 +2583,37 @@
 
           </div>
 
+          <div class="accordion-item">
+
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                Material para el alumno
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+              <div class="accordion-body">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                  <h1 class="text-center">Material para el alumno</h1>
+
+                  <div class="row">
+
+                    <div class="col my-3 mx-3">
+
+
+                    </div>
+
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
         </div>
 
         <!--Formatos Con Causa-->
@@ -2683,6 +2934,37 @@
 
           </div>
 
+          <div class="accordion-item">
+
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                Material para el alumno
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+              <div class="accordion-body">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                  <h1 class="text-center">Material para el alumno</h1>
+
+                  <div class="row">
+
+                    <div class="col my-3 mx-3">
+
+
+                    </div>
+
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
         </div>
 
 
@@ -2984,6 +3266,37 @@
                     <div class="col text-center ">
                       <img src="img/serviciosocial/tutoria.png" style="height: 700px;">
                     </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="accordion-item">
+
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                Material para el alumno
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+              <div class="accordion-body">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
+                  <h1 class="text-center">Material para el alumno</h1>
+
+                  <div class="row">
+
+                    <div class="col my-3 mx-3">
+
+
+                    </div>
+
 
                   </div>
                 </div>
