--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -126,7 +126,7 @@
                         El alumno deberá identificar una institución pública o privada formalmente establecida para realizar el servicio social.
                         <br/><br/>
                         Segundo.<br/>
-                        El alumno deberá solicitar el formulario de registro (SERSO) o enviar correo electrónico a serviciosocial@utel.edu.mx , con los siguientes datos.<br/>
+                        El alumno deberá solicitar el formulario de registro (SERSO) o enviar correo electrónico a serviciosocial@utel.edu.mx, con los siguientes datos.<br/>
 
                         -Nombre  de la empresa o institución donde realizará el servicio social.<br/>
                         -Nombre completo y matrícula.
@@ -140,13 +140,13 @@
 
                         <br/><br/>
                         Cuarto.<br/>
-                        Al enviar la carta aceptación por SERSO o correo electrónico , el alumno recibirá como respuesta el  formato de Reporte global de actividades y la constancia de término. Estos últimos dos documentos se entregan al finalizar el servicio social.
+                        Al enviar la carta aceptación por SERSO o correo electrónico, el alumno recibirá como respuesta el  formato de Reporte global de actividades y la constancia de término. Estos últimos dos documentos se entregan al finalizar el servicio social.
                         <br/><br/>
                         Quinto.<br/>
-                        Al finalizar el servicio social el alumno deberá notificar a la universidad la conclusión del servicio social , para ello deberá enviar por SERSO o correo electrónico  el reporte global y la constancia de término, en hoja membretada, firmados y sellados.
+                        Al finalizar el servicio social el alumno deberá notificar a la universidad la conclusión del servicio social, para ello deberá enviar por SERSO o correo electrónico  el reporte global y la constancia de término, en hoja membretada, firmados y sellados.
                         <br/><br/>
                         Sexto.<br/>
-                        Una vez aprobados todos los documentos de término del servicio escolar ,el alumno deberá enviarlos en formato digital (escaneados) por  SERSO o  correo electrónico para ser aprobados. Por último el alumno deberá adjuntar los formatos en el portal SIU, y esperar a que sean validados y liberado el servicio social , este proceso demora de 15 a 20 días.
+                        Una vez aprobados todos los documentos de término del servicio escolar,el alumno deberá enviarlos en formato digital (escaneados) por  SERSO o  correo electrónico para ser aprobados. Por último el alumno deberá adjuntar los formatos en el portal SIU, y esperar a que sean validados y liberado el servicio social, este proceso demora de 15 a 20 días.
                       </p>
 
                       <!---Aviso-->
@@ -396,7 +396,7 @@
 
                       4.-Horas. <br/>
 
-                      5.-Desarrollo profesional del . <br/>
+                      5.-Desarrollo profesional del alumno. <br/>
 
                       7.-Firma. <br/>
 
@@ -530,7 +530,7 @@
 
                       <div class="col my-3 mx-3">
                         <p>
-                          Para el registro el alumno/egresado ,deberá  enviar correo electrónico a desarrollo.profesional@utel.edu.mx
+                          Para el registro el alumno/egresado,deberá  enviar correo electrónico a desarrollo.profesional@utel.edu.mx
                           <br/>
                           -Nombre completo y matrícula
                           <br/>
@@ -732,7 +732,7 @@
 
                         3.-Actividades. <br/>
 
-                        4.-Desarrollo profesional del . <br/>
+                        4.-Desarrollo profesional del alumno. <br/>
 
                         5.-Firma. <br/>
 
@@ -876,7 +876,7 @@
 
                         <br/><br/>
                         Segundo.<br/>
-                        Si el alumno cubre los requisitos , deberá llenar el formulario (SERSO) o enviar correo electrónico a  serviciosocial@utel.edu.mx  con los siguientes datos:
+                        Si el alumno cubre los requisitos, deberá llenar el formulario (SERSO) o enviar correo electrónico a  serviciosocial@utel.edu.mx  con los siguientes datos:
                         con requisitos solicitados.<br/>
                         Nombre de la  institución donde  labora.<br/>
                         Nombre completo y matrícula.<br/>
@@ -1364,7 +1364,7 @@
 
                       3.-Actividades. <br/>
 
-                      4.-Desarrollo profesional del . <br/>
+                      4.-Desarrollo profesional del alumno. <br/>
 
                       5.-Firma. <br/>
 
@@ -1504,7 +1504,7 @@
                     <div class="col my-3 mx-3">
                       <p>
 
-                        Para esta modalidad es importante resaltar que el alumno deberá entregar los mismos formatos del servicio social regular pero adaptado a la modalidad de juventudes .Los formatos deberán ser impresos en hoja membretada y estar firmados y sellados . 
+                        Para esta modalidad es importante resaltar que el alumno deberá entregar los mismos formatos del servicio social regular pero adaptado a la modalidad de juventudes. Los formatos deberán ser impresos en hoja membretada y estar firmados y sellados. 
                         <br/><br/>
                         Para el registro deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
                         <br/>
@@ -1519,9 +1519,9 @@
                         manera mensual hasta cumplir el objetivo de este.
                         <br/><br/>
 
-                        4. Una vez entregados los 3 avances el  alumno deberá enviar  la versión final del proyecto reportando los objetivos alcanzados con la elaboración de los materiales ,para poder entregar el Reporte Global de Actividades (Anexo 2) y Constancia de Término (Anexo 3).<br/><br/>
+                        4. Una vez entregados los 3 avances el  alumno deberá enviar  la versión final del proyecto reportando los objetivos alcanzados con la elaboración de los materiales,para poder entregar el Reporte Global de Actividades (Anexo 2) y Constancia de Término (Anexo 3).<br/><br/>
 
-                        5. Por último el alumno deberá adjuntar los formatos en SIU , para proceder con la validación y liberación del servicio social .
+                        5. Por último el alumno deberá adjuntar los formatos en SIU, para proceder con la validación y liberación del servicio social.
 
                       </p>
                     </div>
@@ -1716,7 +1716,7 @@
 
                       3.-Actividades. <br/>
 
-                      4.-Desarrollo profesional del . <br/>
+                      4.-Desarrollo profesional del alumno. <br/>
 
                       5.-Firma. <br/>
 
@@ -2064,7 +2064,7 @@
 
                       3.-Actividades. <br/>
 
-                      4.-Desarrollo profesional del . <br/>
+                      4.-Desarrollo profesional del alumno. <br/>
 
                       5.-Firma. <br/>
 
@@ -2213,9 +2213,9 @@
                         Nombre completo y matrícula<br/>
                         Modalidad de servicio social<br/>
                         <br/><br/>
-                        2. Una vez registrado ,se comparte el formato de Carta de Aceptación (Anexo), para que se realice el registro del inicio del servicio social
+                        2. Una vez registrado,se comparte el formato de Carta de Aceptación (Anexo), para que se realice el registro del inicio del servicio social
                         <br/><br/>
-                        3. El alumno deberá llevar a cabo las actividades propuestas por la institución, las características y finalización del programa depende de la ONG o Asociación Civil. Una vez finalizado el programa , la institución emite el reporte global de actividades (Anexo 2) y la Constancia de término (Anexo 3).
+                        3. El alumno deberá llevar a cabo las actividades propuestas por la institución, las características y finalización del programa depende de la ONG o Asociación Civil. Una vez finalizado el programa, la institución emite el reporte global de actividades (Anexo 2) y la Constancia de término (Anexo 3).
                         <br/><br/>
                         4. Al finalizar el alumno deberá compartir los formatos de término para revisión y posterior tendrá que adjuntarlos en el portal SIU para la validación y liberación
                       </p>
@@ -2408,7 +2408,7 @@
 
                       3.-Actividades. <br/>
 
-                      4.-Desarrollo profesional del . <br/>
+                      4.-Desarrollo profesional del alumno. <br/>
 
                       5.-Firma. <br/>
 
@@ -2563,9 +2563,9 @@
                         <br/><br/>
                         1.El  alumno/egresado, solicitará a la Dirección de Servicios Escolares y Regulación de la Universidad, su autorización para realizar el servicio social en la ONG de su elección. Para dicho propósito entregará la Carta de aceptación del servicio social (ver anexo 1) expedida por la ONG que corresponda y solicitará su registro en el programa.
                         <br/><br/>
-                        2. El alumno/egresado ,  realizará una donación sugerida de $1,500.00 MNX, así como materiales que visibilicen y sensibilicen las problemáticas de la población a la que apoya la fundación, esto a través de una investigación documental.
+                        2. El alumno/egresado,  realizará una donación sugerida de $1,500.00 MNX, así como materiales que visibilicen y sensibilicen las problemáticas de la población a la que apoya la fundación, esto a través de una investigación documental.
                         <br/><br/>
-                        3. El alumno /egresado , entregará avances de la investigación y materiales. Una vez finalizados los materiales  deberá enviar los formatos de reporte global de actividades (Anexo 2) y la Constancia de Término (Anexo 3), para revisión.
+                        3. El alumno /egresado, entregará avances de la investigación y materiales. Una vez finalizados los materiales  deberá enviar los formatos de reporte global de actividades (Anexo 2) y la Constancia de Término (Anexo 3), para revisión.
                         <br/><br/>
                         4. Por último deberá adjuntar los formatos para la validación y liberación del servicio social 
 
@@ -2688,7 +2688,7 @@
 
                     7.-Firma.
 
-                    <a href="docs/docss/ca-ssconcausa.docx" download="ca-ssconcausa.docx" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/causa/ca-ssconcausa.docx" download="ca-ssconcausa.docx" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
 
                   </div>
                 </div>
@@ -2759,12 +2759,12 @@
 
                       3.-Actividades. <br/>
 
-                      4.-Desarrollo profesional del . <br/>
+                      4.-Desarrollo profesional del alumno. <br/>
 
                       5.-Firma. <br/>
 
                     </p>
-                    <a href="docs/docss/rga-ssconcausa.docx" download="rga-ssconcausa.docx" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/causa/rga-ssconcausa.docx" download="rga-ssconcausa.docx" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -2838,7 +2838,7 @@
 
                     </p>
 
-                    <a href="docs/docss/ca-ssconcausa.docx" download="ca-ssconcausa.docx" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/causa/ct-ssconcausa.docx" download="ct-ssconcausa.docx" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -3040,7 +3040,7 @@
 
                     7.-Firma.
 
-                    <a href="docs/docss/caempresas.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/empresas/caempresas.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
 
                   </div>
                 </div>
@@ -3111,13 +3111,13 @@
 
                       3.-Actividades. <br/>
 
-                      4.-Desarrollo profesional del . <br/>
+                      4.-Desarrollo profesional del alumno. <br/>
 
                       5.-Firma. <br/>
 
                     </p>
 
-                    <a href="docs/docss/rgempresas.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/empresas/rgempresas.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -3252,7 +3252,7 @@
                     <div class="col my-3 mx-3">
                       <p>
 
-                        1. El alumno/egresado ,se inscribe al programa de tutorías en la institución. Este deberá entregar a la universidad la carta de aceptación (Anexo 1) emitida por la institución.
+                        1. El alumno/egresado,se inscribe al programa de tutorías en la institución. Este deberá entregar a la universidad la carta de aceptación (Anexo 1) emitida por la institución.
                         <br/><br/>
                         2. El formará parte del programa durante al menos seis meses o hasta cumplir con el objetivo propuesto por la institución.
                         <br/><br/>
@@ -3448,7 +3448,7 @@
 
                       3.-Actividades. <br/>
 
-                      4.-Desarrollo profesional del . <br/>
+                      4.-Desarrollo profesional del alumno. <br/>
 
                       5.-Firma. <br/>
 
