--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -41,8 +41,8 @@
 
                         El tiempo estimado para la elaboración del documento es de 60 a 90 dias hábiles.</br>
                         Se deberán cubrir los siguientes requisitos:</br>
-                        -Certificado total de estudios emitido por autoridad educativa de México</br>
-                        -Pago de tramite o beneficio en paquete</br>
+                        ● Certificado total de estudios emitido por autoridad educativa de México</br>
+                        ● Pago de tramite o beneficio en paquete</br>
                         
                         </p>
 
@@ -135,8 +135,8 @@
 
                         El tiempo estimado para la elaboración del documento es de 60 a 90 dias hábiles.</br>
                         Se deberán cubrir los siguientes requisitos:</br>
-                        -Título emitido por autoridad educativa de México</br>
-                        -Pago de tramite o beneficio en paquete</br>
+                        ● Título emitido por autoridad educativa de México</br>
+                        ● Pago de tramite o beneficio en paquete</br>
                         
                       </p>
 
@@ -592,11 +592,11 @@
                 Realizar este trámite permite a nuestros egresados reconocer y validar sus estudios de Utel en territorio 
                 estadounidense, disfrutando de los mismos beneficios y condiciones tales como:</br></br>
 
-                -Continuar sus estudios en una universidad norteamericana.</br>
-                -Obtener trabajo en una empresa formalmente establecida.</br>
-                -Trabajar en el área de formación profesional.</br>
-                -Mejorar ingresos económicos.</br>
-                -Realizar trámites migratorios o certificación laboral.                      
+                ● Continuar sus estudios en una universidad norteamericana.</br>
+                ● Obtener trabajo en una empresa formalmente establecida.</br>
+                ● Trabajar en el área de formación profesional.</br>
+                ● Mejorar ingresos económicos.</br>
+                ● Realizar trámites migratorios o certificación laboral.                      
 
             </a>
 
@@ -614,13 +614,13 @@
 
               <h6>1. Llenar la Solicitud de Convalidación de Título de Utel en USA.</h6></br></br>    
               <h6>2. Pagar el costo correspondiente al trámite, que incluye:</h6></br></br>    
-                -Envío de documentos a USA</br> 
-                -Traducción oficial del Título de Utel (en USA)</br> 
-                -Procedimiento de revalidación ante Agencia Acreditadora (en USA)</br> 
-                -Resultado: Informe de Equivalencia</br> 
-                -Legalización ante Notario Público</br> 
-                -Apostilla de la Convención de La Haya para el Informe de Equivalencia (emitida en USA)</br> 
-                -Envío de documentos a Utel</br> 
+                ● Envío de documentos a USA</br> 
+                ● Traducción oficial del Título de Utel (en USA)</br> 
+                ● Procedimiento de revalidación ante Agencia Acreditadora (en USA)</br> 
+                ● Resultado: Informe de Equivalencia</br> 
+                ● Legalización ante Notario Público</br> 
+                ● Apostilla de la Convención de La Haya para el Informe de Equivalencia (emitida en USA)</br> 
+                ● Envío de documentos a Utel</br> 
                 
 
           </a>
