--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -97,8 +97,8 @@
 
           Deberá cubrir los siguientes requisitos:<br/>
 
-          -Contar con el 70% de créditos<br/>
-          -Tener documentación física completa (Acta de nacimiento y Certificado de bachillerato)<br/>
+          ● Contar con el 70% de créditos<br/>
+          ● Tener documentación física completa (Acta de nacimiento y Certificado de bachillerato)<br/>
 
         </div>
 
@@ -128,8 +128,8 @@
                         Segundo.<br/>
                         El alumno deberá solicitar el formulario de registro (SERSO) o enviar correo electrónico a serviciosocial@utel.edu.mx, con los siguientes datos.<br/>
 
-                        -Nombre  de la empresa o institución donde realizará el servicio social.<br/>
-                        -Nombre completo y matrícula.
+                        ● Nombre  de la empresa o institución donde realizará el servicio social.<br/>
+                        ● Nombre completo y matrícula.
 
                         <br/><br/>
                         Tercero.<br/>
@@ -192,6 +192,9 @@
 
                   <div class="row">
 
+                    
+                    <img class="img-proceso" src="img/serviciosocial/info_regular.png">
+
                     <div class="col my-3 mx-3">
 
 
@@ -241,13 +244,13 @@
                       institución para que los alumnos puedan realizar su servicio social dentro de la
                       misma.<br/><br/>
 
-                      -Datos completos del  <br/><br/>
+                      ● Datos completos del  <br/><br/>
 
-                      -Departamento y encargado del área de interés. <br/><br/>
+                      ● Departamento y encargado del área de interés. <br/><br/>
 
-                      -Firma de responsable de servicio social. <br/><br/>
+                      ● Firma de responsable de servicio social. <br/><br/>
 
-                      -Sello de Utel <br/><br/>
+                      ● Sello de Utel <br/><br/>
 
                     </p>
 
@@ -532,9 +535,9 @@
                         <p>
                           Para el registro el alumno/egresado,deberá  enviar correo electrónico a desarrollo.profesional@utel.edu.mx
                           <br/>
-                          -Nombre completo y matrícula
+                          ● Nombre completo y matrícula
                           <br/>
-                          -Modalidad de servicio social
+                          ● Modalidad de servicio social
 
                           <br/><br/>
                           1. Si el alumno/egresado cumple con los requisitos  y es aceptado dentro del programa  se  comparte la Carta de Aceptación (Anexo 1) y se comparte la fecha de la capacitación
@@ -994,17 +997,17 @@
                     <strong class="py-3 px-3"> Características de la carta de presentación</strong>
 
                     <p>
-                      -La carta de presentación es un documento donde la escuela se presenta formalmente ante alguna
+                      ● La carta de presentación es un documento donde la escuela se presenta formalmente ante alguna
                       institución para que los alumnos puedan realizar su servicio social dentro de la
                       misma.<br/><br/>
 
-                      -Datos completos del alumno <br/><br/>
+                      ● Datos completos del alumno <br/><br/>
 
-                      -Departamento y encargado del área de interés. <br/><br/>
+                      ● Departamento y encargado del área de interés. <br/><br/>
 
-                      -Firma de responsable de servicio social. <br/><br/>
+                      ● Firma de responsable de servicio social. <br/><br/>
 
-                      -Sello de Utel <br/><br/>
+                      ● Sello de Utel <br/><br/>
 
                     </p>
 
@@ -1061,13 +1064,13 @@
                   <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la Excepción de servicio social</strong>
-                      -La carta de excepción es un documento donde el alumno presenta su solicitud para la liberación del servicio social donde se especifica que el alumno es trabajador gubernamental y queda excento de realizar el servicio social.
+                      ● La carta de excepción es un documento donde el alumno presenta su solicitud para la liberación del servicio social donde se especifica que el alumno es trabajador gubernamental y queda excento de realizar el servicio social.
 
-                      -Datos completos del alumno <br/><br/>
+                      ● Datos completos del alumno <br/><br/>
 
-                      -Dependencia guberntal. <br/><br/>
+                      ● Dependencia guberntal. <br/><br/>
 
-                      -Firma de responsable del departamento donde labora. <br/><br/>
+                      ● Firma de responsable del departamento donde labora. <br/><br/>
 
                     <a href="docs/docss/art91/formatossart91.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
@@ -1097,8 +1100,8 @@
           Todos los alumnos de las profesiones a que se refiere esta Ley, así como los profesionistas no mayores de
           60 años, o impedidos por enfermedad grave, ejerzan o no, deberán prestar el servicio social en los términos de esta Ley.<br/><br/>
 
-          -Mayores de 60 comprobar con INE, CURP o Acta de Nacimiento<br/>
-          -Para enfermedad deberá compartir por correo a serviciosocial@utel.edu.mx archivo médico que compruebe el impedimento crónico que impida realizar el servicio social
+          ● Mayores de 60 comprobar con INE, CURP o Acta de Nacimiento<br/>
+          ● Para enfermedad deberá compartir por correo a serviciosocial@utel.edu.mx archivo médico que compruebe el impedimento crónico que impida realizar el servicio social
         </div>
 
       </div>
