--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -468,8 +468,8 @@
                 <div class="card-body">
                   <h5 class="card-title">Se deberán cubrir los siguientes requisitos:</h5>
                   <p class="card-text">
-                    -Tener documentos digitales generados </br>
-                    -No contar con saldos pendientes</br>
+                    ● Tener documentos digitales generados </br>
+                    ● No contar con saldos pendientes</br>
 
                 </div>
               </div>
@@ -623,9 +623,9 @@
                           archivo pdf y xml.</br></br>
       
                           Se deberán cubrir los siguientes requisitos:</br>
-                          -No tener saldos pendientes </br>
-                          -Pago del documento </br>
-                          -Documentación completa </br>
+                          ● No tener saldos pendientes </br>
+                          ● Pago del documento </br>
+                          ● Documentación completa </br>
                           
                         </p>
 
