--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -469,21 +469,21 @@
                 <div class="card-body">
                   <h5 class="card-title">Se deberán cubrir los siguientes requisitos:</h5>
                   <p class="card-text">
-                    -Tener estatus de matriculado </br>
-                    -No tener saldos pendientes</br>
-                    -Haber cursado como mínimo, un año en calendario como alumno Utel.</br>
-                    -Haber aprobado las primeras 12 asignaturas del plan de estudio para el primer diploma Intermedio
+                    ● Tener estatus de matriculado </br>
+                    ● No tener saldos pendientes</br>
+                    ● Haber cursado como mínimo, un año en calendario como alumno Utel.</br>
+                    ● Haber aprobado las primeras 12 asignaturas del plan de estudio para el primer diploma Intermedio
                     y las 12 subsecuentes para el segundo. </br>
-                    -Documentación digital completa </br>
-                    -Pago del documento.
+                    ● Documentación digital completa </br>
+                    ● Pago del documento.
 
                   <h5 class="card-title">Beneficios:</h5>
                   <p class="card-text">
-                    -Perfil profesional elevado.</br>
-                    -Mayor competitividad laboral.</br>
-                    -Crecimiento curricular.</br>
-                    -Mejores oportunidades para ingresar al mundo laboral.</br>
-                    -Satisfacción personal y prestigio.</br>
+                    ● Perfil profesional elevado.</br>
+                    ● Mayor competitividad laboral.</br>
+                    ● Crecimiento curricular.</br>
+                    ● Mejores oportunidades para ingresar al mundo laboral.</br>
+                    ● Satisfacción personal y prestigio.</br>
                     
                 </div>
               </div>
@@ -626,10 +626,6 @@
           
         </div>
     </div>
-</div>    
-    
-  
-    
-    
+</div>       
     
 </div>
