--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -1160,8 +1160,8 @@
                         <br/> <br/>
                         Para el registro deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
                         <br/>
-                        -Nombre completo y matrícula<br/>
-                        -Modalidad de servicio social
+                        ● Nombre completo y matrícula<br/>
+                        ● Modalidad de servicio social
                         <br/><br/>
                         1.- El alumno deberá elaborar una propuesta de un proyecto relacionado con el programa académico en curso.
                         <br/><br/>
@@ -1511,8 +1511,8 @@
                         <br/><br/>
                         Para el registro deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
                         <br/>
-                        Nombre completo y matrícula<br/>
-                        Modalidad de servicio social
+                        ● Nombre completo y matrícula<br/>
+                        ● Modalidad de servicio social
                         <br/><br/>
                         1. El alumno deberá llenar el formato para registrar el inicio del “Servicio Social para las Juventudes”, en éste compartirá el proyecto a desarrollar y los objetivos.<br/><br/>
 
@@ -1863,8 +1863,8 @@
                       <p>
                         Para el registro deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
                         <br/>
-                        Nombre completo y matrícula<br/>
-                        Modalidad de servicio social 
+                        ● Nombre completo y matrícula<br/>
+                        ● Modalidad de servicio social 
                         <br/><br/>
                         1. Se emiten convocatorias de acuerdo con los espacios disponibles dentro de las áreas de la Universidad. En las mismas se delimitan las actividades y el programa de servicio social. La aceptación dependerá de las características de la vacante.
                         <br/><br/>
@@ -2213,8 +2213,8 @@
 
                         1. Para el registro el alumno deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
                         <br/>
-                        Nombre completo y matrícula<br/>
-                        Modalidad de servicio social<br/>
+                        ● Nombre completo y matrícula<br/>
+                        ● Modalidad de servicio social<br/>
                         <br/><br/>
                         2. Una vez registrado,se comparte el formato de Carta de Aceptación (Anexo), para que se realice el registro del inicio del servicio social
                         <br/><br/>
@@ -2559,8 +2559,8 @@
                       <p>
                         Para el registro el alumno deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
                         <br/>
-                        Nombre completo y matrícula<br/>
-                        Modalidad de servicio social
+                        ● Nombre completo y matrícula<br/>
+                        ● Modalidad de servicio social
                         <br/><br/>
                         Es importante contactar primero a la ONG y revisar con ellos si están dispuestos a apoyar con la firma de los formatos de término.
                         <br/><br/>
@@ -2908,8 +2908,8 @@
 
                         Para el registro el alumno deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
                         <br/>
-                        -Nombre completo y matrícula<br/>
-                        -Modalidad de servicio Social
+                        ● Nombre completo y matrícula<br/>
+                        ● Modalidad de servicio Social
                         <br/><br/>
                         1. El alumno solicitará a la Dirección de Servicios Escolares y Regulación de la Universidad, su autorización para realizar el servicio social en la empresa o emprendimiento de su elección.
                         <br/><br/>
