--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -1192,21 +1192,23 @@
 
           <div class="accordion-item">
 
-            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+            <h2 class="accordion-header" id="panelsStayOpen-headingmaterialcolaborativo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                data-bs-target="#panelsStayOpen-collapsematerialcolaborativo" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsematerialcolaborativo">
                 Material para el alumno
               </button>
             </h2>
 
-            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+            <div id="panelsStayOpen-collapsematerialcolaborativo" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmaterialcolaborativo">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Material para el alumno</h1>
 
                   <div class="row">
+
+                    <img class="img-proceso" src="img/serviciosocial/info_colaborativo.png">
 
                     <div class="col my-3 mx-3">
 
